--- a/templates/component/project/_project_tasks.html.twig
+++ b/templates/component/project/_project_tasks.html.twig
@@ -1,29 +1,27 @@
-<div class="taskDashboard">
-    <div class="row justify-content-sm-center">
-        <div class="home-section d-flex flex-column bg-light rounded p-4 shadow w-100 mx-4">
+<div class="taskDashboard row">
+    <div class="home-section d-flex flex-column w-100">
 
-            <h1>All tasks in this project</h1>
-            <p>    <a href="{{ path('project_task_new', {'id' : project.id}) }}">Create a new task</a></p>
+        <h1>All tasks in this project</h1>
+        <p><a href="{{ path('project_task_new', {'id': project.id}) }}">Create a new task</a></p>
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="cards-tab" data-toggle="tab" href="#cards" role="tab"
-                       aria-controls="cards" aria-selected="true">Cards</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="table-tab" data-toggle="tab" href="#table" role="tab" aria-controls="table"
-                       aria-selected="false">Table</a>
-                </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active justify-content-center" id="cards" role="tabpanel" aria-labelledby="cards-tab">
-                    {% include 'component/project/_project_tasks_cards.html.twig' %}
-                </div>
-                <div class="tab-pane fade" id="table" role="tabpanel" aria-labelledby="table-tab">
-                    {% include 'component/project/_project_tasks_table.html.twig' %}
-                </div>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a class="nav-link active" id="cards-tab" data-toggle="tab" href="#cards" role="tab"
+                   aria-controls="cards" aria-selected="true">Cards</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="table-tab" data-toggle="tab" href="#table" role="tab" aria-controls="table"
+                   aria-selected="false">Table</a>
+            </li>
+        </ul>
+
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active justify-content-center" id="cards" role="tabpanel" aria-labelledby="cards-tab">
+                {% include 'component/project/_project_tasks_cards.html.twig' %}
             </div>
-
+            <div class="tab-pane fade" id="table" role="tabpanel" aria-labelledby="table-tab">
+                {% include 'component/project/_project_tasks_table.html.twig' %}
+            </div>
         </div>
 
     </div>
