Now Project has skills

--- a/templates/component/project/_project_members.html.twig
+++ b/templates/component/project/_project_members.html.twig
@@ -1,9 +1,10 @@
 <div class="p-5">
     <h5>The current project owner</h5>
 <ul>
+    {{ dump(project.participants) }}
     {% for participant in project.participants %}
         {% if participant.role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER') %}
-            <li>{{ participant.role }} - {{ participant.user.firstname }} {{ participant.user.lastname }} {{ participant.user.organization.name }}</li>
+            <li>{{ participant.role }} - {{ participant.user.firstname }} {{ participant.user.lastname }} </li>
         {% endif %}
     {% endfor %}
 </ul>
