--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -3,11 +3,42 @@
 {% block title %}New Request{% endblock %}
 
 {% block framed %}
-    <h1 class="text-primary">Create a new request</h1>
-        {% form_theme form 'bootstrap_4_layout.html.twig' %}
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button class="btn btn-lg btn-primary">Create a request</button>
-        {{ form_end(form) }}
+    <h1 class="text-primary">Edit Project Details</h1>
+    {% form_theme form 'bootstrap_4_layout.html.twig' %}
+    {{ form_start(form) }}
+    {{ form_row(form.title) }}
+    {{ form_row(form.description) }}
+    {{ form_row(form.sdgs) }}
+
+    <div class="row justify-content-center">
+        {% for element in form.skills.vars.choices %}
+            <div class="col-md-3 card text-white bg-gradient-blueish p-3 m-3">
+                <div class="card-header bg-transparent"><h3>{{ element.label }}</h3></div>
+                <div class="card-body bg-light text-dark">
+
+                    {% for choice in element.choices %}
+                        <div class="skillset-card">
+                            <label title="{{ choice.label }}" for="project_skills_{{ choice.value }}">{{ choice.label }}</label>
+                            <input {{ choice.value in form.skills.vars.value ? 'checked' : ''}}  type="checkbox" id="project_skills_{{ choice.value }}" name="project[skills][]" value="{{ choice.value }}">
+                            <span class="check"></span>
+                        </div>
+                    {% endfor %}
+
+                </div>
+            </div>
+        {% endfor %}
+        <div class="col-md-3 card text-white bg-gradient-blueish p-3 m-3">
+            <div class="card-header bg-transparent"><h3>Others</h3></div>
+            <div class="card-body bg-light text-dark">
+                <a class="skillset-card">
+                    <a href="{{ path('dashboard_new_skills') }}">// Add new skill</a>
+            </div>
+        </div>
+    </div>
+
+
+    <button type="submit" class="btn btn-warning">Update</button>
+{#    {{ form_end(form) }}#}
+    {{ form_end(form, {'render_rest': false}) }}
 {% endblock %}
 
