--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
 		<link rel="icon" type="image/png" href="{{ asset('build/images/favicon.png') }}"/>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/4bec6c81e2.js" crossorigin="anonymous"></script>
 		<title>
 			{% block title %}Wanna Gonna{% endblock %}
 		</title>
