--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -5,43 +5,56 @@
 
 
 {% block framed %}
-    <h1 class="text-primary">{{ project.title }}</h1>
-    <div>
-        <span class="badge badge-secondary">{{ project.textStatus }}</span>
-        {% for sdg in project.sdgs %}
-            <span class="badge badge-primary">{{ sdg.name }}</span>
-        {% endfor %}
-    </div>
-    <div class="row mt-5">
-        <div class="col-1">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link active" id="v-pills-tasks-tab" data-toggle="pill" href="#v-pills-tasks" role="tab" aria-controls="v-pills-tasks" aria-selected="true">Tasks</a>
-                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-                <a class="nav-link" id="v-pills-details-tab" data-toggle="pill" href="#v-pills-details" role="tab" aria-controls="v-pills-details" aria-selected="false">Details</a>
-                <a class="nav-link" id="v-pills-members-tab" data-toggle="pill" href="#v-pills-members" role="tab" aria-controls="v-pills-members" aria-selected="false">Members</a>
-            </div>
-        </div>
-        <div class="col-11">
-            <div class="tab-content" id="v-pills-tabContent">
-                <div class="tab-pane fade show active" id="v-pills-tasks" role="tabpanel" aria-labelledby="v-pills-tasks-tab">
-                    {% include 'component/project/_project_tasks.html.twig' %}
-                </div>
-                <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                    {% include 'component/project/_project_messages.html.twig' %}
-                </div>
-                <div class="tab-pane fade" id="v-pills-details" role="tabpanel" aria-labelledby="v-pills-details-tab">
-                    {% include 'component/project/_project_details.html.twig' %}
-                </div>
-                <div class="tab-pane fade" id="v-pills-members" role="tabpanel" aria-labelledby="v-pills-members-tab">
-                    {% include 'component/project/_project_members.html.twig' %}
-                </div>
-            </div>
+<h1 class="text-primary">{{ project.title }}</h1>
+<div>
+    <span class="badge badge-secondary">{{ project.textStatus }}</span>
+    {% for sdg in project.sdgs %}
+        <span class="badge badge-primary">{{ sdg.name }}</span>
+    {% endfor %}
+</div>
+<div class="row mt-5">
+    <div class="col-1">
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link active" id="v-pills-tasks-tab" data-toggle="pill" href="#v-pills-tasks" role="tab"
+               aria-controls="v-pills-tasks" aria-selected="true">Tasks</a>
+            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
+               aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+            <a class="nav-link" id="v-pills-details-tab" data-toggle="pill" href="#v-pills-details" role="tab"
+               aria-controls="v-pills-details" aria-selected="false">Details</a>
+            <a class="nav-link" id="v-pills-members-tab" data-toggle="pill" href="#v-pills-members" role="tab"
+               aria-controls="v-pills-members" aria-selected="false">Members</a>
+            {% if (app.user and
+                app.user.isParticipantOn(project) and
+                app.user.getParticipationOn(project).role != constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER')) %}
+                <a class="nav-link" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Files</a>
+            {% endif %}
         </div>
     </div>
+    <div class="col-11">
+        <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-tasks" role="tabpanel"
+                 aria-labelledby="v-pills-tasks-tab">
+                {% include 'component/project/_project_tasks.html.twig' %}
+            </div>
+            <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+                {% include 'component/project/_project_messages.html.twig' %}
+            </div>
+            <div class="tab-pane fade" id="v-pills-details" role="tabpanel" aria-labelledby="v-pills-details-tab">
+                {% include 'component/project/_project_details.html.twig' %}
+            </div>
+            <div class="tab-pane fade" id="v-pills-members" role="tabpanel" aria-labelledby="v-pills-members-tab">
+                {% include 'component/project/_project_members.html.twig' %}
+            </div>
+            <div class="tab-pane fade" id="v-pills-files" role="tabpanel" aria-labelledby="v-pills-files-tab">
+                {% include 'component/project/_project_files.html.twig' %}
+            </div>
+        </div>
+    </div>
+</div>
     <div class="d-flex flex-row justify-content-end align-content-center mt-5">
         <div>
             <p class="font-italic m-3">Starting Date :
-                {{ project.createdAt|date('y-m-d') }} </p>
+    {{ project.createdAt|date('y-m-d') }} </p>
         </div>
         <div>
             {% if app.user %}
