--- a/templates/component/project/_project_files.html.twig
+++ b/templates/component/project/_project_files.html.twig
@@ -1,4 +1,4 @@
-<div class="container home-section d-flex flex-column bg-light rounded p-4 shadow w-100 mx-4">
+<div class="container d-flex flex-column bg-light rounded p-4 w-100 mx-4">
     <h1>Files</h1>
     <div class="row">
         <div class="col">
@@ -8,6 +8,7 @@
                     <li class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
                         <span> <i class="far fa-file"></i> - {{ file.name }}</span>
+                        <span><a href="/uploads/{{ file.name }}" download="{{ file.name }}">Download</a></span>
                         <span class="badge badge-secondary badge-pill mb-1">{{ file.updatedAt|date('y-m-d') }}</span>
                         </div>
                         <span>{{ file.projectFile }}</span>
