--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout/frame.html.twig' %}
 
-{% block title %}New Task{% endblock %}
+{% block title %}New request{% endblock %}
 
 {% block framed %}
     <h1 class="text-primary">Create a new request</h1>
