--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -11,7 +11,7 @@
 <h1 class="text-primary">Your Dashboard</h1>
     <div class="row">
         {% include 'component/dashboard/_navbar_dashboard.html.twig' %}
-        <div class="col-lg-10">
+        <div class="col-12 col-lg-9">
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade changingcontent show active" id="v-pills-projects" role="tabpanel" aria-labelledby="v-pills-projects-tab">
                     {% include 'component/dashboard/_user_participations.html.twig' %}
