--- a/templates/component/project/_project_members.html.twig
+++ b/templates/component/project/_project_members.html.twig
@@ -19,7 +19,7 @@
     <h5>They are currently contributing to this project</h5>
     <ul>{% for participant in project.participants %}
             {% if participant.role == constant('App\\Entity\\Participant::ROLE_VOLUNTEER') %}
-                <li>{{ participant.role }} - {{ participant.user.firstname }}</li>
+                <li>{{ participant.role }} - {{ participant.user.firstname }} {{ participant.user.lastname }}</li>
             {% endif %}
         {% endfor %}
     </ul>
@@ -32,7 +32,7 @@
                 <ul>
                     {% if participant.role == constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER') %}
                         <li>
-                            <span>{{ participant.role }} - {{ participant.user.firstname }}</span>
+                            <span>{{ participant.role }} - {{ participant.user.firstname }} {{ participant.user.lastname }}</span>
 
                             <form method="post"
                                   action="{{ path('project_participant_project_accepted', {'project': participant.project.id, 'user': participant.user.id}) }}">
