--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -23,6 +23,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.text-shadow {
+  text-shadow: 0 0 2px white;
+}
+
 .nav {
   transition: all 0.3s ease-out;
   scroll-behavior: smooth;
