--- a/templates/component/project/task/task_attribute.html.twig
+++ b/templates/component/project/task/task_attribute.html.twig
@@ -8,9 +8,9 @@
     <div class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
         <div class="row justify-content-center">
             <div class="col-lg-8 col-sm-12">
-                <h1 class="text-primary">Task attribution</h1>
+                <h1 class="text-primary">Task assignment</h1>
 
-    {{ include('component/project/task/task_form.html.twig', {'button_label': 'Attribut'}) }}
+    {{ include('component/project/task/task_form.html.twig', {'button_label': 'Assign'}) }}
 
             </div>
         </div>
